@@ -24,6 +24,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.commons.lang.StringUtils;
+import org.apache.log4j.Logger;
 
 import de.erdesignerng.ERDesignerBundle;
 import de.erdesignerng.exception.ElementAlreadyExistsException;
@@ -38,16 +39,20 @@ import de.erdesignerng.model.Relation;
 import de.erdesignerng.model.Table;
 import de.erdesignerng.model.View;
 import de.erdesignerng.visual.common.ERDesignerWorldConnector;
+import de.erdesignerng.visual.editor.exception.ExceptionEditor;
 
 /**
  * @author $Author: mirkosertic $
  * @version $Date: 2009-03-13 15:40:33 $
  * @param <T>
- *                the dialect
+ *            the dialect
  */
 public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> extends ReverseEngineeringStrategy<T> {
 
+    private static final Logger LOGGER = Logger.getLogger(JDBCReverseEngineeringStrategy.class);
+
     public static final String TABLE_TABLE_TYPE = "TABLE";
+
     public static final String VIEW_TABLE_TYPE = "VIEW";
 
     protected JDBCReverseEngineeringStrategy(T aDialect) {
@@ -62,16 +67,16 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Reverse engineerer the sql statement for a view.
      * 
      * @param aViewEntry
-     *                die view entry
+     *            die view entry
      * @param aConnection
-     *                the connection
+     *            the connection
      * @param aView
-     *                the view
+     *            the view
      * @return the sql statement
      * @throws SQLException
-     *                 is thrown in case of an exception
+     *             is thrown in case of an exception
      * @throws ReverseEngineeringException
-     *                 is thrown in case of an exception
+     *             is thrown in case of an exception
      */
     protected String reverseEngineerViewSQL(TableEntry aViewEntry, Connection aConnection, View aView)
             throws SQLException, ReverseEngineeringException {
@@ -82,19 +87,19 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Reverse enginner an existing view.
      * 
      * @param aModel
-     *                the model
+     *            the model
      * @param aOptions
-     *                the options
+     *            the options
      * @param aNotifier
-     *                the notifier
+     *            the notifier
      * @param aViewEntry
-     *                the table
+     *            the table
      * @param aConnection
-     *                the connection
+     *            the connection
      * @throws SQLException
-     *                 is thrown in case of an error
+     *             is thrown in case of an error
      * @throws ReverseEngineeringException
-     *                 is thrown in case of an error
+     *             is thrown in case of an error
      */
     protected void reverseEngineerView(Model aModel, ReverseEngineeringOptions aOptions,
             ReverseEngineeringNotifier aNotifier, TableEntry aViewEntry, Connection aConnection) throws SQLException,
@@ -120,11 +125,12 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
             }
 
             String theStatement = reverseEngineerViewSQL(aViewEntry, aConnection, theView);
-            /*try {
-                SQLUtils.updateViewAttributesFromSQL(theView, theStatement);
-            } catch (Exception e) {
-                throw new ReverseEngineeringException("Problem reading view definition", e);
-            }*/
+            /*
+             * try { SQLUtils.updateViewAttributesFromSQL(theView,
+             * theStatement); } catch (Exception e) { throw new
+             * ReverseEngineeringException("Problem reading view definition",
+             * e); }
+             */
             theView.setSql(theStatement);
 
             // We are done here
@@ -142,19 +148,19 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Reverse enginner an existing table.
      * 
      * @param aModel
-     *                the model
+     *            the model
      * @param aOptions
-     *                the options
+     *            the options
      * @param aNotifier
-     *                the notifier
+     *            the notifier
      * @param aTableEntry
-     *                the table
+     *            the table
      * @param aConnection
-     *                the connection
+     *            the connection
      * @throws SQLException
-     *                 is thrown in case of an error
+     *             is thrown in case of an error
      * @throws ReverseEngineeringException
-     *                 is thrown in case of an error
+     *             is thrown in case of an error
      */
     protected void reverseEngineerTable(Model aModel, ReverseEngineeringOptions aOptions,
             ReverseEngineeringNotifier aNotifier, TableEntry aTableEntry, Connection aConnection) throws SQLException,
@@ -319,9 +325,9 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
         while (theIndexResults.next()) {
 
             String theIndexName = convertIndexNameFor(aTable, theIndexResults.getString("INDEX_NAME"));
-            
+
             if ((theIndexName != null) && ((theIndex == null) || (!theIndex.getOriginalName().equals(theIndexName)))) {
-                
+
                 String theNewIndexName = dialect.getCastType().cast(theIndexName);
 
                 if (aTable.getIndexes().findByName(theNewIndexName) == null) {
@@ -367,26 +373,25 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Reverse engineer an attribute within an index.
      * 
      * @param aMetaData
-     *                the database meta data
+     *            the database meta data
      * @param aTableEntry
-     *                the current table entry
+     *            the current table entry
      * @param aTable
-     *                the table
+     *            the table
      * @param aNotifier
-     *                the notifier
+     *            the notifier
      * @param aIndex
-     *                the current index
+     *            the current index
      * @param aColumnName
-     *                the column name
+     *            the column name
      * @param aPosition
-     *                the column position
+     *            the column position
      * @param aASCorDESC
-     *                "A" = Ascending, "D" = Descending, NULL = sort not
-     *                supported
+     *            "A" = Ascending, "D" = Descending, NULL = sort not supported
      * @throws SQLException
-     *                 in case of an error
+     *             in case of an error
      * @throws ReverseEngineeringException
-     *                 in case of an error
+     *             in case of an error
      */
     protected void reverseEngineerIndexAttribute(DatabaseMetaData aMetaData, TableEntry aTableEntry, Table aTable,
             ReverseEngineeringNotifier aNotifier, Index aIndex, String aColumnName, short aPosition, String aASCorDESC)
@@ -416,19 +421,19 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Reverse engineer relations.
      * 
      * @param aModel
-     *                the model
+     *            the model
      * @param aOptions
-     *                the options
+     *            the options
      * @param aNotifier
-     *                the notifier
+     *            the notifier
      * @param aEntry
-     *                the schema entry
+     *            the schema entry
      * @param aConnection
-     *                the connection
+     *            the connection
      * @throws SQLException
-     *                 is thrown in case of an error
+     *             is thrown in case of an error
      * @throws ReverseEngineeringException
-     *                 is thrown in case of an error
+     *             is thrown in case of an error
      */
     protected void reverseEngineerRelations(Model aModel, ReverseEngineeringOptions aOptions,
             ReverseEngineeringNotifier aNotifier, SchemaEntry aEntry, Connection aConnection) throws SQLException,
@@ -444,7 +449,7 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
         }
 
         int theSysCounter = 0;
-        
+
         List<Relation> theNewRelations = new ArrayList<Relation>();
 
         for (Table theTable : aModel.getTables()) {
@@ -455,7 +460,8 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
 
             // Foreign keys
             Relation theRelation = null;
-            ResultSet theForeignKeys = theMetaData.getImportedKeys(theCatalogName, theSchemaName, theTable.getOriginalName());
+            ResultSet theForeignKeys = theMetaData.getImportedKeys(theCatalogName, theSchemaName, theTable
+                    .getOriginalName());
             while (theForeignKeys.next()) {
                 String theFKName = theForeignKeys.getString("FK_NAME");
 
@@ -553,10 +559,26 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
             }
             theForeignKeys.close();
         }
-        
+
         try {
             for (Relation theRelation : theNewRelations) {
-                aModel.addRelation(theRelation);
+                try {
+                    aModel.addRelation(theRelation);
+                } catch (ElementAlreadyExistsException e) {
+                    // This might happen for instance on DB2 databases
+                    // We will try to generate a new name here!!!
+                    int counter = 0;
+                    String theNewName = null;
+                    while (counter == 0
+                            || aModel.getRelations().findByName(dialect.getCastType().cast(theNewName)) != null) {
+                        counter++;
+                        theNewName = theRelation.getExportingTable().getName() + "_" + theRelation.getImportingTable()
+                                + "_FK" + counter;
+                    }
+                    LOGGER.warn("Relation " + theRelation.getName() + " exists. Renaming it to " + theNewName);
+                    theRelation.setName(theNewName);
+                    aModel.addRelation(theRelation);
+                }
             }
         } catch (Exception e) {
             throw new ReverseEngineeringException(e.getMessage(), e);
@@ -577,7 +599,7 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Test if a table type is a view.
      * 
      * @param aTableType
-     *                the table type
+     *            the table type
      * @return true if yes, else false
      */
     protected boolean isTableTypeView(String aTableType) {
@@ -588,9 +610,9 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Check if the table is a valid table for reverse engineering.
      * 
      * @param aTableName
-     *                the table name
+     *            the table name
      * @param aTableType
-     *                the table type
+     *            the table type
      * @return true if the table is valid, else false
      */
     protected boolean isValidTable(String aTableName, String aTableType) {
@@ -601,9 +623,9 @@ public abstract class JDBCReverseEngineeringStrategy<T extends JDBCDialect> exte
      * Check if the table is a valid view for reverse engineering.
      * 
      * @param aTableName
-     *                the table name
+     *            the table name
      * @param aTableType
-     *                the table type
+     *            the table type
      * @return true if the table is valid, else false
      */
     protected boolean isValidView(String aTableName, String aTableType) {
